--- a/index_A10.html
+++ b/index_A10.html
@@ -58,7 +58,7 @@
     </section>
   </main>
   <footer>
-    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </footer>
+		<p>&copy; 2024, Mahati Yerramilli</p>
+	</footer>
 </body>
 </html>
