--- a/index_A10.html
+++ b/index_A10.html
@@ -58,7 +58,7 @@
     </section>
   </main>
   <footer>
-	<p>2024, Mahati Yerramilli</p>
+		<p>&copy; 2024, Mahati Yerramilli</p>
 </footer>
 </body>
 </html>
